--- a/package.json
+++ b/package.json
@@ -2,20 +2,31 @@
   "name": "svelte-popup",
   "version": "0.0.0",
   "type": "module",
+  "main": "/dist/sveltePopup.cjs.min.js",
+  "model": "/dist/sveltePopup.esm.min.js",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:npm": "rollup --config",
     "preview": "vite preview",
     "check": "svelte-check --tsconfig ./tsconfig.json"
   },
   "devDependencies": {
+    "@rollup/plugin-json": "^4.1.0",
+    "@rollup/plugin-typescript": "^8.3.0",
     "@sveltejs/vite-plugin-svelte": "^1.0.0-next.30",
     "@tsconfig/svelte": "^2.0.1",
+    "camelcase": "^6.3.0",
+    "rollup": "^2.67.0",
+    "rollup-plugin-svelte": "^7.1.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.31.2",
     "svelte": "^3.44.0",
     "svelte-check": "^2.2.7",
     "svelte-preprocess": "^4.9.8",
     "tslib": "^2.3.1",
     "typescript": "^4.4.4",
+    "validate-npm-package-name": "^3.0.0",
     "vite": "^2.7.2"
   }
 }
