--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tsconfig/svelte": "^2.0.1",
     "camelcase": "^6.3.0",
     "rollup": "^2.67.0",
+    "rollup-plugin-postcss": "^4.0.2",
     "rollup-plugin-svelte": "^7.1.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-typescript2": "^0.31.2",
