--- a/package.json
+++ b/package.json
@@ -4,6 +4,22 @@
   "type": "module",
   "main": "/dist/sveltePopup.cjs.min.js",
   "module": "/dist/sveltePopup.es.min.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hengshanMWC/svelte-popup.git"
+  },
+  "keywords": [
+    "http",
+    "api",
+    "axios",
+    "fly.io"
+  ],
+  "author": "mwc",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hengshanMWC/svelte-popup/issues"
+  },
+  "homepage": "https://github.com/hengshanMWC/svelte-popup#readme",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
